[package]
name = "randomx-rs"
description = "Rust bindings for the RandomX Proof-of-Work"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/randomx-rs"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.4.0"
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Create a dynamic library for C usage and a rust library so it can be called from rust
crate-type = ["cdylib","lib"]

[dependencies]
libc = "0.2.62"
derive-error = "0.0.4"
bitflags = "1.2.1"

[build-dependencies]
git2 = "0.8"
